yaml/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "home-stack"
  labels:
    name: "home-stack"
---
apiVersion: v1
kind: Namespace
metadata:
  name: "home-stack-db"
  labels:
    name: "home-stack-db"
---
apiVersion: v1
kind: Namespace
metadata:
  name: "home-stack-dmz"
  labels:
    name: "home-stack-dmz"
---
apiVersion: v1
kind: Namespace
metadata:
  name: "home-stack-iot"
  labels:
    name: "home-stack-iot"
