yaml/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  namespace: home-stack-dmz
spec:
  selector:
    app: dashboard
  ports:
    - name: http
      protocol: TCP
      port: 80
      #targetPort: 80
      #nodePort: 30080
  #type: NodePort
  # turn off SNAT for NodePort and LoadBalancer - so that remote IP is sent to application (this was needed for Nginx IP whitelisting)
  # but with the undesired effect that kube-proxy only proxies proxy requests to local endpoints,
  # and does not forward traffic to other nodes
  #externalTrafficPolicy: Local
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-deployment
  labels:
    app: dashboard
  namespace: home-stack-dmz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard-container
          image: alokkusingh/home-dashboard
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            #- name: tz-config
            #  mountPath: /etc/localtime
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Kolkata
            type: File
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
