yaml/home-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-api-service
  namespace: home-stack
spec:
  # Service will act as load balancer - selector is matching underling instance(s). There can be one or more Deployment(s) with the same selector label
  selector:
    # XX-YYY
    app: home-api
  # Defining headless service
  #clusterIP: None
  ports:
    - protocol: TCP
      port: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-api-deployment
  labels:
    # This should be same as Service spec:selector
    # XX-YYY
    app: home-api
  namespace: home-stack
spec:
  # commenting the replicas as this will be controlled by HPA
  #replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: home-api
  template:
    metadata:
      labels:
        app: home-api
        network/db-access: "true"
    spec:
      containers:
        - name: home-api-container
          image: alokkusingh/home-api-service:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /home/api/actuator/health/liveness
              port: 8081
            initialDelaySeconds: 5
            timeoutSeconds: 2
            periodSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /home/api/actuator/health/readiness
              port: 8081
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 30
            failureThreshold: 3
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Kolkata
            type: File
