yaml/home-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-auth-service
  namespace: home-stack
spec:
  # Service will act as load balancer - selector is matching underling instance(s). There can be one or more Deployment(s) with the same selector label
  selector:
    # XX-YYY
    app: home-auth
  # Defining headless service
  #clusterIP: None
  ports:
    - protocol: TCP
      port: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-auth-deployment
  labels:
    # This should be same as Service spec:selector
    # XX-YYY
    app: home-auth
  namespace: home-stack
spec:
  # Will use HPA so commenting the below
  #replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: home-auth
  template:
    metadata:
      labels:
        app: home-auth
        network/db-access: "true"
    spec:
#      nodeSelector:
#        kubernetes.io/hostname: jgte
      containers:
        - name: home-auth-container
          image: alokkusingh/home-auth-service:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /home/auth/actuator/health/liveness
              port: 8081
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /home/auth/actuator/health/readiness
              port: 8081
            initialDelaySeconds: 90
            timeoutSeconds: 5
            periodSeconds: 30
            failureThreshold: 10
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Kolkata
            type: File
