yaml/home-docs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-docs-service
  namespace: home-stack
spec:
  selector:
    app: home-docs-service
  # Defining headless service
  #clusterIP: None
  ports:
    - protocol: TCP
      port: 8081
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-docs-deployment
  namespace: home-stack
spec:
  serviceName: home-docs-service
  selector:
    matchLabels:
      app: home-docs-service
  replicas: 1
  template:
    metadata:
      labels:
        app: home-docs-service
        network/db-access: "true"
    spec:
      nodeSelector:
        kubernetes.io/hostname: khbr
      containers:
        - name: home-docs-container
          image: alokkusingh/home-docs-service:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /home/docs/actuator/health/liveness
              port: 8081
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 15
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /home/docs/actuator/health/readiness
              port: 8081
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 30
            failureThreshold: 3
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: notes-volume
              mountPath: /Users/aloksingh
            - name: docs-volume
              mountPath: /Users/aloksingh/git/home-docs
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: notes-volume
          hostPath:
            # directory location on host
            path: /home/alok/git/home-notes
            # this field is optional
            type: Directory
        - name: docs-volume
          hostPath:
            # directory location on host
            path: /home/alok/git/home-docs
            # this field is optional
            type: Directory
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Kolkata
            type: File
