yaml/home-email-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-email-service
  namespace: home-stack
spec:
  # Service will act as load balancer - selector is matching underling instance(s). There can be one or more Deployment(s) with the same selector label
  selector:
    # XX-YYY
    app: home-email
  # Defining headless service
  #clusterIP: None
  ports:
    - protocol: TCP
      port: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-email-deployment
  labels:
    # This should be same as Service spec:selector
    # XX-YYY
    app: home-email
  namespace: home-stack
spec:
  # commenting the replicas as this will be controlled by HPA
  #replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: home-email
  template:
    metadata:
      labels:
        app: home-email
        network/db-access: "true"
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: node.kubernetes.io/microk8s-worker
                    operator: In
                    values:
                      - microk8s-worker
      #                - microk8s-controlplane
#      nodeSelector:
#        kubernetes.io/hostname: khbr
      containers:
        - name: home-api-container
          image: alokkusingh/email-service:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /home/email/actuator/health/liveness
              port: 8081
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 60
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /home/email/actuator/health/readiness
              port: 8081
            initialDelaySeconds: 90
            timeoutSeconds: 5
            periodSeconds: 60
            failureThreshold: 5
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Kolkata
            type: File
