yaml/home-etl-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-etl-service
  namespace: home-stack
spec:
  selector:
    app: home-etl
  # Defining headless service
  #clusterIP: None
  ports:
    - protocol: TCP
      port: 8081
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-etl-deployment
  namespace: home-stack
spec:
  serviceName: home-etl-service
  selector:
    matchLabels:
      app: home-etl
  replicas: 1
  template:
    metadata:
      labels:
        app: home-etl
        network/db-access: "true"
    spec:
      nodeSelector:
        kubernetes.io/hostname: jgte
      containers:
        - name: home-etl-container
          image: alokkusingh/home-etl-service:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /home/etl/actuator/health/liveness
              port: 8081
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 15
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /home/etl/actuator/health/readiness
              port: 8081
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 30
            failureThreshold: 3
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: stmt-volume
              mountPath: /Users/aloksingh/BankStatements
            #- name: tz-config
            #  mountPath: /etc/localtime
          resources:
            limits:
              # determining the system memory size
              memory: 512Mi
            requests:
              # is just for the Kubernetes cluster to find the node that matches the requested memory to run the pod on it
              memory: 256Mi
        - name: home-scheduler-container
          image: alokkusingh/home-scheduler-task:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /local/api/actuator/health/liveness
              port: 8082
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 15
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /local/api/actuator/health/readiness
              port: 8082
            initialDelaySeconds: 20
            timeoutSeconds: 5
            periodSeconds: 30
            failureThreshold: 3
          ports:
            - containerPort: 8082
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 128Mi
      volumes:
        - name: stmt-volume
          hostPath:
            # directory location on host
            path: /home/alok/data/git/BankStatements
            # this field is optional
            type: Directory
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Kolkata
            type: File
