yaml/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: home-stack-db
spec:
  #clusterIP: None # Tish makes service accessible within the cluster, mostly from for other pods to access
  type: NodePort
  ports:
    - port: 3306 # This is the port on which MySQL will be exposed as service within the cluster
      targetPort: 3306 # This is the port on which MySQL listens, if not specified, it defaults to port above
      nodePort: 32306  # This is the port on which MySQL will be accessible from outside the cluster, if not specified, it will be randomly assigned by Kubernetes
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: home-stack-db
spec:
  serviceName: mysql
  selector:
    matchLabels:
      app: mysql
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      nodeSelector:
        kubernetes.io/hostname: jgte
      containers:
        - image: mysql:8.0-oracle
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
            #- name: tz-config
            #  mountPath: /etc/localtime
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Kolkata
            type: File
