yaml/stmt-parser-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stmtparser-service
  namespace: home-stack
spec:
  selector:
    app: stmtparser
  # Defining headless service
  #clusterIP: None
  ports:
    - protocol: TCP
      port: 8081
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stmtparser-deployment
  namespace: home-stack
spec:
  serviceName: stmtparser-service
  selector:
    matchLabels:
      app: stmtparser
  replicas: 1
  template:
    metadata:
      labels:
        app: stmtparser
    spec:
      containers:
        - name: stmt-parser-container
          image: alokkusingh/statement-parser:2.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: stmt-volume
              mountPath: /Users/aloksingh/BankStatements
            #- name: tz-config
            #  mountPath: /etc/localtime
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 256Mi
      volumes:
        - name: stmt-volume
          hostPath:
            # directory location on host
            path: /home/alok/data/git/BankStatements
            # this field is optional
            type: Directory
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Kolkata
            type: File
