yaml/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-home-backend
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  #ingressClassName: nginx-example
  rules:
    - http:
        paths:
          - path: /home/api
            pathType: Prefix
            backend:
              service:
                name: home-api-service
                port:
                  number: 8081
          - path: /home/etl
            pathType: Prefix
            backend:
              service:
                name: home-etl-service
                port:
                  number: 8081
