yaml/networkpolicy.yaml
  apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: home-db-policy
  namespace: home-stack-db
spec:
  # Policy applies to all pods in the namespace with label app=mysql
  podSelector:
      matchLabels:
        app: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: home-stack
          podSelector:
            matchLabels:
              network/db-access: "true"
        - ipBlock:
            cidr: 192.168.1.0/24
